// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Calendar /> has defaults 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to June 2020
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          July 2020
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to August 2020
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="June 28"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593324000000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="June 29"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593410400000"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593496800000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="date"
              data-epoch="1593583200000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="date"
              data-epoch="1593669600000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="date"
              data-epoch="1593756000000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="date"
              data-epoch="1593842400000"
              role="gridcell"
            >
              4
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="date"
              data-epoch="1593928800000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="date"
              data-epoch="1594015200000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="date"
              data-epoch="1594101600000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="date"
              data-epoch="1594188000000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="date"
              data-epoch="1594274400000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="date"
              data-epoch="1594360800000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="date"
              data-epoch="1594447200000"
              role="gridcell"
            >
              11
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 12"
              aria-selected="false"
              class="date"
              data-epoch="1594533600000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="July 13"
              aria-selected="false"
              class="date"
              data-epoch="1594620000000"
              role="gridcell"
            >
              13
            </td>
            <td
              aria-label="July 14"
              aria-selected="false"
              class="date"
              data-epoch="1594706400000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="July 15"
              aria-selected="false"
              class="date"
              data-epoch="1594792800000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="July 16"
              aria-selected="false"
              class="date"
              data-epoch="1594879200000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="July 17"
              aria-selected="false"
              class="date"
              data-epoch="1594965600000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="July 18"
              aria-selected="false"
              class="date"
              data-epoch="1595052000000"
              role="gridcell"
            >
              18
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 19"
              aria-selected="false"
              class="date"
              data-epoch="1595138400000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="July 20"
              aria-selected="false"
              class="date"
              data-epoch="1595224800000"
              role="gridcell"
            >
              20
            </td>
            <td
              aria-label="July 21"
              aria-selected="false"
              class="date"
              data-epoch="1595311200000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="July 22"
              aria-selected="false"
              class="date"
              data-epoch="1595397600000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="July 23"
              aria-selected="false"
              class="date"
              data-epoch="1595484000000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="July 24"
              aria-selected="false"
              class="date"
              data-epoch="1595570400000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="July 25"
              aria-selected="false"
              class="date"
              data-epoch="1595656800000"
              role="gridcell"
            >
              25
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 26"
              aria-selected="false"
              class="date"
              data-epoch="1595743200000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="July 27"
              aria-selected="false"
              class="date"
              data-epoch="1595829600000"
              role="gridcell"
            >
              27
            </td>
            <td
              aria-label="July 28"
              aria-selected="false"
              class="date"
              data-epoch="1595916000000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="July 29"
              aria-selected="false"
              class="highlighted-date"
              data-epoch="1596002400000"
              role="gridcell"
              tabindex="0"
            >
              29
            </td>
            <td
              aria-label="July 30"
              aria-selected="false"
              class="date"
              data-epoch="1596088800000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 31"
              aria-selected="false"
              class="date"
              data-epoch="1596175200000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="August 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596261600000"
              role="gridcell"
            >
              1
            </td>
          </tr>
          <tr>
            <td
              aria-label="August 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596348000000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="August 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596434400000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="August 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596520800000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="August 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596607200000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="August 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596693600000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="August 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596780000000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="August 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596866400000"
              role="gridcell"
            >
              8
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`<Calendar /> renders the previous month 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to May 2020
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          June 2020
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to July 2020
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="May 31"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1590904800000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="June 1"
              aria-selected="false"
              class="date"
              data-epoch="1590991200000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="June 2"
              aria-selected="false"
              class="date"
              data-epoch="1591077600000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="June 3"
              aria-selected="false"
              class="date"
              data-epoch="1591164000000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="June 4"
              aria-selected="false"
              class="date"
              data-epoch="1591250400000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="June 5"
              aria-selected="false"
              class="date"
              data-epoch="1591336800000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="June 6"
              aria-selected="false"
              class="date"
              data-epoch="1591423200000"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 7"
              aria-selected="false"
              class="date"
              data-epoch="1591509600000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="June 8"
              aria-selected="false"
              class="date"
              data-epoch="1591596000000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="June 9"
              aria-selected="false"
              class="date"
              data-epoch="1591682400000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="June 10"
              aria-selected="false"
              class="date"
              data-epoch="1591768800000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="June 11"
              aria-selected="false"
              class="date"
              data-epoch="1591855200000"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="June 12"
              aria-selected="false"
              class="date"
              data-epoch="1591941600000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="June 13"
              aria-selected="false"
              class="date"
              data-epoch="1592028000000"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 14"
              aria-selected="false"
              class="date"
              data-epoch="1592114400000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="June 15"
              aria-selected="false"
              class="date"
              data-epoch="1592200800000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="June 16"
              aria-selected="false"
              class="date"
              data-epoch="1592287200000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="June 17"
              aria-selected="false"
              class="date"
              data-epoch="1592373600000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="June 18"
              aria-selected="false"
              class="date"
              data-epoch="1592460000000"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="June 19"
              aria-selected="false"
              class="date"
              data-epoch="1592546400000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="June 20"
              aria-selected="false"
              class="date"
              data-epoch="1592632800000"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 21"
              aria-selected="false"
              class="date"
              data-epoch="1592719200000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="June 22"
              aria-selected="false"
              class="date"
              data-epoch="1592805600000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="June 23"
              aria-selected="false"
              class="date"
              data-epoch="1592892000000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="June 24"
              aria-selected="false"
              class="date"
              data-epoch="1592978400000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="June 25"
              aria-selected="false"
              class="date"
              data-epoch="1593064800000"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="June 26"
              aria-selected="false"
              class="date"
              data-epoch="1593151200000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="June 27"
              aria-selected="false"
              class="date"
              data-epoch="1593237600000"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 28"
              aria-selected="false"
              class="date"
              data-epoch="1593324000000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="June 29"
              aria-selected="false"
              class="date"
              data-epoch="1593410400000"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="date"
              data-epoch="1593496800000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593583200000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593669600000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593756000000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593842400000"
              role="gridcell"
            >
              4
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593928800000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594015200000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594101600000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594188000000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594274400000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594360800000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594447200000"
              role="gridcell"
            >
              11
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`<Calendar /> renders the previous year 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to June 2019
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          July 2019
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to August 2019
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1561874400000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="date"
              data-epoch="1561960800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="date"
              data-epoch="1562047200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="date"
              data-epoch="1562133600000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="date"
              data-epoch="1562220000000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="date"
              data-epoch="1562306400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="date"
              data-epoch="1562392800000"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="date"
              data-epoch="1562479200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="date"
              data-epoch="1562565600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="date"
              data-epoch="1562652000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="date"
              data-epoch="1562738400000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="date"
              data-epoch="1562824800000"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="July 12"
              aria-selected="false"
              class="date"
              data-epoch="1562911200000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="July 13"
              aria-selected="false"
              class="date"
              data-epoch="1562997600000"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 14"
              aria-selected="false"
              class="date"
              data-epoch="1563084000000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="July 15"
              aria-selected="false"
              class="date"
              data-epoch="1563170400000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="July 16"
              aria-selected="false"
              class="date"
              data-epoch="1563256800000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="July 17"
              aria-selected="false"
              class="date"
              data-epoch="1563343200000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="July 18"
              aria-selected="false"
              class="date"
              data-epoch="1563429600000"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="July 19"
              aria-selected="false"
              class="date"
              data-epoch="1563516000000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="July 20"
              aria-selected="false"
              class="date"
              data-epoch="1563602400000"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 21"
              aria-selected="false"
              class="date"
              data-epoch="1563688800000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="July 22"
              aria-selected="false"
              class="date"
              data-epoch="1563775200000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="July 23"
              aria-selected="false"
              class="date"
              data-epoch="1563861600000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="July 24"
              aria-selected="false"
              class="date"
              data-epoch="1563948000000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="July 25"
              aria-selected="false"
              class="date"
              data-epoch="1564034400000"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="July 26"
              aria-selected="false"
              class="date"
              data-epoch="1564120800000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="July 27"
              aria-selected="false"
              class="date"
              data-epoch="1564207200000"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 28"
              aria-selected="false"
              class="date"
              data-epoch="1564293600000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="July 29"
              aria-selected="false"
              class="date"
              data-epoch="1564380000000"
              role="gridcell"
              tabindex="0"
            >
              29
            </td>
            <td
              aria-label="July 30"
              aria-selected="false"
              class="date"
              data-epoch="1564466400000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 31"
              aria-selected="false"
              class="date"
              data-epoch="1564552800000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="August 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564639200000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="August 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564725600000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="August 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564812000000"
              role="gridcell"
            >
              3
            </td>
          </tr>
          <tr>
            <td
              aria-label="August 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564898400000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="August 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564984800000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="August 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565071200000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="August 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565157600000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="August 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565244000000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="August 9"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565330400000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="August 10"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565416800000"
              role="gridcell"
            >
              10
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
